Fix CSS for mobile and give warning when its on mobile

--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -14,5 +14,5 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2em;
-    height: 90px;
+    height: 6vw;
 }
