--- a/src/app/components/parts/page-container/page-container.component.css
+++ b/src/app/components/parts/page-container/page-container.component.css
@@ -112,8 +112,8 @@ mat-sidenav .title {
 }
 
 .logo-small img {
-    height: auto;
-    width: 260px;
+    height: 50px;
+    width: auto;
 }
 .mat-icon {
     font-size: 19px;
